# Axum-API

./: .gitignore
main/: Cargo.toml
main/migrations/: 20250603163014_create_users_table.sql  20250603163046_create_posts_table.sql
main/src/: config.rs  error.rs  main.rs
main/src/handlers/: spotify.rs
main/src/models/: mod.rs  response.rs  spotify.rs
main/src/services/: spotify.rs
