[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"]}
tower-http = { version = "0.5", features = ["cors"]}
base64 = "0.21"
dotenvy = "0.15"
thiserror = "1.0"
